zien24_implementation/org/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Aantal_aanmeldingen_per_maand__c</fullName>
        <label>Aantal aanmeldingen per maand</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aantal_woningen_in_aanbod__c</fullName>
        <label>Aantal woningen in aanbod</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branchevereniging__c</fullName>
        <label>Branchevereniging</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VBO</fullName>
                </value>
                <value>
                    <fullName>VastgoedPro</fullName>
                </value>
                <value>
                    <fullName>NVM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maakt_gebruik_van_concurrent__c</fullName>
        <label>Maakt gebruik van concurrent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zibber</fullName>
                </value>
                <value>
                    <fullName>Topr</fullName>
                </value>
                <value>
                    <fullName>Object en Co</fullName>
                </value>
                <value>
                    <fullName>Boykeys</fullName>
                </value>
                <value>
                    <fullName>Lokale fotograaf</fullName>
                </value>
                <value>
                    <fullName>SooMedia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welke_mediaproducten_worden_ingezet__c</fullName>
        <label>Welke mediaproducten worden ingezet</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Plattegrond</fullName>
                </value>
                <value>
                    <fullName>360 graden foto&apos;s</fullName>
                </value>
                <value>
                    <fullName>Professionele fotografie</fullName>
                </value>
                <value>
                    <fullName>Inmeten</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>